# find-module-info

./: .gitignore  Cargo.toml  README.md
document/: FindModuleInfo.drawio
rust_protobuf_builder/: Cargo.toml
rust_protobuf_builder/src/: main.rs
rust_protobuf_builder/src/proto/: MakeFile.proto
src/: command_paraser.rs  constants.rs  lib.rs  main.rs
src/core/: find_make_files.rs  find_output_binary.rs  make_file.rs  mod.rs
src/proto/: make_files.rs  mod.rs  model.rs
src/utils/: common_functions.rs  mod.rs  result.rs
tests/: unit_test.rs
